# btcsolver

./: .UTXO_REBUILD_IN_PROGRESS.pid  .gitignore  AGENT-RUNTIME.md  AGENTS.md  Cargo.toml  Check-BlockHeader.ps1  Deploy-BruteForce.ps1  Disable-PrioritySync.ps1  Enable-PrioritySync.ps1  Install-AlwaysOn.bat  Install-Startup.bat  Install-Watchdog.bat  KEY-HUNT-IDEAS.md  Keep-Core-And-Utxo.ps1  Launch-BitcoinCore.bat  Launch-BitcoinCore.ps1  Launch-Dashboard.bat  Launch-Dashboard.ps1  Merge-Corpus.ps1  RAM-224GB-OPTIMIZATION.md  README.md  Restart-Scan.ps1  SESSION.md  SESSION_RESUME.md  SESSION_RESUME_BRAINWALLET.md  SETUP-2E-PC.md  START-24-7.bat  START-BTC-SOLVER.bat  START-OVERNIGHT.bat  START-TOUT.bat  STATUS.md  Set-GPUAffinity.ps1  Start-BtcSolver-Auto.ps1  Uninstall-AlwaysOn.bat  Uninstall-Startup.bat  Uninstall-Watchdog.bat  Watch-BtcSolver.ps1  bible-combined.txt  bible-english.txt  bible-french.txt  (+75 more)
corpora/: README.md  corpus-names-cities-all.txt  corpus-names-first.txt
data/: CORE-UTXO-STATUS.json  PRIORITY-SYNC.flag.off-20260716-180108  UTXO-DAY-SCAN-STATUS.md  _gpu_smoke.out  _range_test.err  _range_test.out  dashboard.out  dump_to_flat.err  dump_to_flat.out  forgotten-matches-interim.json  keys-archive.json  scan-ranges-log.json  scan-restart.json  utxo-active.snapshot.meta.json  utxo-day-935000.snapshot.meta.json  utxo-tip.building.snapshot.meta.json
data/FALSE-POSITIVES-20260716-162409/: README.txt  data-found-keys.json  keys-archive.json  keys-archive.jsonl
docs/: SPEED-VALIDATIONS.md
src/: alert_beep.rs  flat_index.rs  gpu.rs  key_archive.rs  lib.rs  main.rs  sys_info.rs
src/dashboard/: _patch_gpu_feed.py  _patch_shared_fill.py  bitcoind.rs  dict_scan.rs  key_checker.rs  mod.rs  range_log.rs  scan_manager.rs
src/gpu/: _patch_window.py  compile_cuda131.bat  compile_dll.bat  compile_dll2.bat  compile_dual.bat  compile_new_dll.bat  compile_once.bat  compile_ptx_sm86.bat  compile_sm86.bat  compile_sm86_only.bat  secp256k1_kernel.cu  test_min.exp  test_min.lib
static/dashboard/: app.js  index.html  style.css
tools/: dexor_blocks.py
