[package]
name = "btcsolver"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bitcoin = { version = "0.32", features = ["base64"] }
bip39 = "2.2"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
bitcoin_hashes = "0.14"
redb = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
ureq = { version = "2.12", features = ["json"] }
