[package]
name = "btcsolver"
version = "0.5.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
base64 = "0.22.1"
bech32 = "0.9"
bitcoin = { version = "0.32", features = ["base64"] }
bip39 = "2.2"
hmac = "0.12"
pbkdf2 = "0.12"
sha2 = "0.10"
md-5 = "0.10"
digest = "0.10"
chrono = { version = "0.4.44", features = ["clock"] }
clap = { version = "4.6.1", features = ["derive"] }
hex = "0.4.3"
bitcoin_hashes = "0.14"
redb = "4.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
num_cpus = "1.16"
rand = { version = "0.8", features = ["getrandom"] }
getrandom = "0.2"
ureq = { version = "2.12", features = ["json"] }
zstd = "0.13"
libloading = "0.9.0"
memmap2 = "0.9"
crossbeam-channel = "0.5"
crossbeam-queue = "0.3"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
bitcoincore-rpc = "0.19"
tower-http = { version = "0.5", features = ["fs", "trace"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "brute_force"
path = "src/bin/brute_force.rs"

[[bin]]
name = "full_utxo_indexer"
path = "src/bin/full_utxo_indexer.rs"

[[bin]]
name = "brainwallet_scan"
path = "src/bin/brainwallet_scan.rs"

[[bin]]
name = "check_keys"
path = "src/bin/check_keys.rs"

[[bin]]
name = "brainwallet_extended"
path = "src/bin/brainwallet_extended.rs"

[[bin]]
name = "debug_flatindex"
path = "src/bin/debug_flatindex.rs"

[[bin]]
name = "debug_utxo_read"
path = "src/bin/debug_utxo_read.rs"

[[bin]]
name = "timestamp_scan"
path = "src/bin/timestamp_scan.rs"

[[bin]]
name = "bible_pattern_generator"
path = "src/bin/bible_pattern_generator.rs"

[[bin]]
name = "dump_to_flat"
path = "src/bin/dump_to_flat.rs"

[[bin]]
name = "btcsolver_dashboard"
path = "src/bin/btcsolver_dashboard.rs"

[[bin]]
name = "easy_key_generator"
path = "src/bin/easy_key_generator.rs"

[[bin]]
name = "historical_indexer"
path = "src/bin/historical_indexer.rs"

[[bin]]
name = "easy_key_generator_v2"
path = "src/bin/easy_key_generator_v2.rs"

[[bin]]
name = "math_constants_keys"
path = "src/bin/math_constants_keys.rs"

[[bin]]
name = "human_2009_keys"
path = "src/bin/human_2009_keys.rs"

[[bin]]
name = "pop_culture_2009_keys"
path = "src/bin/pop_culture_2009_keys.rs"

[[bin]]
name = "merge_corpus"
path = "src/bin/merge_corpus.rs"

[[bin]]
name = "merge_historical_index"
path = "src/bin/merge_historical_index.rs"

[[bin]]
name = "external_merge_sort"
path = "src/bin/external_merge_sort.rs"
